# easytrakt

./: .gitignore  .travis.yaml  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  test-results.xml  tox.ini
easytrakt/: __init__.py  generator.py  models.py
tests/integration/: conftest.py  test_data_retrieval.py
tests/unit/: conftest.py  test_data_retrieval.py
