[metadata]
name = easytrakt
version = 0.1.0
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = simple client for Trakt.TV api
description-file = README.md
home-page = https://github.com/lad1337/easytrakt
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries

