[metadata]
name = easytrakt
version = 0.1.4
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = simple client for Trakt.TV api
description-file = README.rst
home-page = https://github.com/lad1337/easytrakt
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries

